theis read through + conclusion text rewritten

--- a/content/conclusion.tex
+++ b/content/conclusion.tex
@@ -1,2 +1,2 @@
 \chapter{Conclusion}
-During the EMC course, an overall knowledge about why products needs good EMC have been gained. 
+During the EMC course, an overall knowledge about why products needs good EMC have been gained. The feedback sessions have helped in pointing out less good PCB routing when talking about good EMC. Also the hands on approach where a radiation and an immunity test should be performed after designing a device according to good EMC guidelines have been very good. 
