--- a/content/design.tex
+++ b/content/design.tex
@@ -19,7 +19,7 @@ Basically there are two different generic standards both when talking immunity a
 	\end{itemize}
 The two standards describes what demands the equipment have to fulfill, how the tests should be done and how the measurements should be reported. 
 \subsection{Schematic and first PCB layout}
-Full documentation of the schematic design can be found in the Appendix \textit{EPRO\_3\_\&\_4\_PLC - Hardware}. The design consists of two parts, a SMPS (switch mode power supply) and a PLC (power line communication) module. Both modules takes input from the power line (30VDC), where the Power Line part filters out the communication on top of the DC voltage and also sends commands to other modules on the net. The SMPS converts the 30VDC input to a 5VDC supply that can be used to power the Processor board and the FPGA board used in the project (PRO4). The PCB has been divided in two sections with the 30VDC connection in between the two modules to have as little interference as possible.
+Full documentation of the schematic design can be found in the Appendix \textit{EPRO\_3\_\&\_4\_PLC - Hardware}. The design consists of two parts, a SMPS (switch mode power supply) and a PLC (power line communication) module. Both modules takes input from the power line (30VDC), where the Power Line part filters out the communication on top of the DC voltage and also sends commands to other modules on the net. The SMPS converts the 30VDC input to a 5VDC supply that can be used to power the Processor board and the FPGA board used in the project\footnote{EPRO4}. The PCB has been divided into two sections with the 30VDC connection in between the two modules to have as little interference as possible.
 \begin{figure}[H]
 	\begin{centering}
 		 \includegraphics[width=0.5\textwidth]{images/pcb_design.pdf}
