--- a/content/frontpage.tex
+++ b/content/frontpage.tex
@@ -5,6 +5,7 @@
 \huge { }\vspace{0.4cm}
 \large{\textbf{Counselor:} Per Lysgaard}\\ \vspace{0.0cm}
 %\huge{Subtitle}}
+\hspace{3cm}
 \end{center}
 
 \centering
@@ -16,8 +17,8 @@
 \vspace{0.4cm}
 \Large{\textbf{BY E10 - Team3: \\ \vspace{0.2cm}Theis Christensen\hspace{1.5cm}Dennis Madsen\hspace{1.5cm}Paulo Fontes}
 \\\textbf{(10691)\hspace{3.7cm}(90248)\hspace{3.7cm}(10484)}}
+\\\vspace{5cm}\Large{Due date : 25.05.2012}
 \end{center}
-
 %Creat an empty page in Latex
 \newpage
 \thispagestyle{empty}
