--- a/content/design.tex
+++ b/content/design.tex
@@ -59,7 +59,7 @@ The first PCB layout was made before attending the EMC course in the start of Fe
 \end{figure}
 
 \subsection{Review 2}
-In the second layout all track widths were adjusted, track length shortened and the amount of long tracks on the ground plane minimized. The only remark for this design was one of the tracks on the ground plane at twice the length of the other tracks. A PCB was made with this design as the remark was not critical and a redesign would require quiet some work.
+In the second layout all track widths were adjusted, track length shortened and the amount of long tracks on the ground plane minimized. The only remark for this design was one of the tracks on the ground plane at twice the length of the other tracks. A PCB was made with this design as the remark was not critical and a redesign would require quiet some time.
 \\\textit{Note: the free space on the PCB was connected to ground on both planes.}
 \begin{figure}[H]
 	\begin{centering}
@@ -73,7 +73,7 @@ Testing of the first PCB is documented in the Appendix \textit{EPRO\_3\_\&\_4\_P
 	\item The output of the switch mode was unstable when loaded. 
 	\begin{itemize}
 		\item The feedback track shall be made shorter and the width of it enlarged. 
-		\item Generally all component shall be placed closer to the switch mode device to shorten track lengths. 
+		\item Generally all components shall be placed closer to the switch mode device to shorten track lengths. 
 		\item More vias for better connection to the ground plane, if it is possible, one or more should be placed underneath the switch mode device.
 	\end{itemize}
 	\item When noise was added to the power line, random characters appeared in the communication.
