--- a/content/introduction.tex
+++ b/content/introduction.tex
@@ -1,4 +1,4 @@
 \chapter{Introduction}
-The EMC report is written as part of the EEMC1 (Electrostatic Compatibility) course attended in the start of 4th semester on the Electronic Design Engineering eduction at AU-Herning. The report contains information about designing a device in order to accomplish EMC. The different parts which will be described and discussed concerns designing the PCB including review meetings, functional test, EMC test (radiation and immunity tests).
+The EMC report is written as part of the EEMC1 (Electrostatic Compatibility) course attended in the start of 4th semester on the Electronic Design Engineering eduction at AU-Herning. The report contains information about designing a device in order to accomplish good EMC. The different parts which will be described and discussed concerns designing the PCB including review meetings, functional test, EMC test (radiation and immunity tests).
 
 \newpage
