--- a/content/conclusion.tex
+++ b/content/conclusion.tex
@@ -1,3 +1,3 @@
 \chapter{Conclusion}
 During the EMC course, an overall knowledge about why products needs good EMC have been gained. The feedback sessions have helped in pointing out less good PCB routing when talking about good EMC. Also the hands on approach where a radiation and an immunity test should be performed after designing a device according to good EMC guidelines have been very good. 
-\p Generally some good tools have been gained during the course which can be used in futuring project to accomplish good EMC.
+\p Generally good tools have been gained during the course which can be used in future projects to accomplish good EMC.
