--- a/content/design.tex
+++ b/content/design.tex
@@ -4,7 +4,7 @@ This chapter describes how the PCB has been designed in order to obtain EMC. The
 %\todo[inline]{Description of how you expect your design can comply with existing laws (how the system and PCB has been designed to obtain EMC).\\ Short description of which laws the system must comply to.\\ Description of reviews we've had with Per.}
 \section{Standards}
 The different European standards according to Electromagnetic compatibility is found on the European Commission website \footnote{\url{http://ec.europa.eu/enterprise/policies/european-standards/harmonised-standards/electromagnetic-compatibility/index\_en.htm\#Note 2.3}}.
-The standard: \textit{EN 50412-2-1:2005} deals with: \textit{Power line communication apparatus and systems used in low-voltage installations in the frequency range 1.6 MHz to 30 MHz}. However, the power line is not to work on a low-voltage installation but in an isolated DC environment. Another reason why not to use this standard is its expire date: 01/04/2008. Instead of this standard a generic standard is used.
+The standard: \textit{EN 50412-2-1:2005} deals with: \textit{Power line communication apparatus and systems used in low-voltage installations in the frequency range 1.6 MHz to 30 MHz}. However, the power line is not to work on a low-voltage installation but in an isolated DC environment. Another reason why not to use this standard is its expire date: 01/04/2008. Instead of this standard, a generic standard is used.
 
 \begin{figure}[H]
 	\begin{centering}
@@ -29,7 +29,7 @@ Full documentation of the schematic design can be found in the Appendix \textit{
 \end{figure}
 
 \subsubsection{Schematic}
-The schematic has only changed slightly during the different versions of the circuit board. Down below the newest version of the schematic is shown (the PCB that fits to the schematic is shown in review 2).
+The schematic has only changed slightly during the different versions of the circuit board. The newest version of the schematic is shown below (the PCB that fits to the schematic is shown in review 2).
 \begin{figure}[H]
 	\begin{centering}
 		 \includegraphics[width=0.85\textwidth,page=2,angle=0]{images/SIG60_v0_4}
@@ -45,7 +45,7 @@ The schematic has only changed slightly during the different versions of the cir
 \end{figure}
 
 \subsection{Review 1}
-The first PCB layout was made before attending the EMC course in the start of February 2012. In the end of the course feedback for the design was given. Basically two things should be changed:
+The first PCB layout was made before attending the EMC course in the start of February 2012. In the end of the course feedback for the design was given. Two aspects should be changed:
 \begin{itemize}
 	\item Shorten tracks on bottom side, so a clean ground plane is held. 
 	\item Enlarge track width (especially power tracks).
@@ -79,7 +79,7 @@ Testing of the first PCB is documented in the Appendix \textit{EPRO\_3\_\&\_4\_P
 	\item When noise was added to the power line, random characters appeared in the communication.
 	\begin{itemize}
 		\item A big resister has been added between the receive pin and ground.
-		\item Filters and crystal shall be placed as close as possible to the power line device to decrease the noise furthermore.
+		\item Filters and crystal shall be placed as close as possible to the power line device to decrease the noise.
 	\end{itemize} 
 	\item The receive diode lightens up all the time.
 	\begin{itemize}
